# dquality

./: app.py  commands.txt  faking.py  fonte.txt  planilha_dados_aleatorios.csv  pyproject.toml  schema.py
