[tool.poetry]
name = "dquality"
version = "0.1.0"
description = ""
authors = ["diego <diegoautomate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.0"
black = "^24.2.0"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
